[gd_scene load_steps=18 format=2]

[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estaciones/BaseEnemiga/SpriteBaseEnemiga1.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/BaseEnemiga/SpriteBaseEnemiga2.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estaciones/BaseEnemiga/BaseEnemiga.gd" type="Script" id=4]
[ext_resource path="res://Juego/Enemigos/AreaColision.gd" type="Script" id=5]
[ext_resource path="res://Juego/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Estaciones/BaseEnemiga/RutaEnemigo.tscn" type="PackedScene" id=7]
[ext_resource path="res://Juego/Estaciones/BaseEnemiga/RutaEnemigo2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Juego/Naves/BarraSalud.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.74902, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.862745, 0.772549, 0.603922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.3797
height = 286.25

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.3214
height = 63.721

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.0043
height = 183.305

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=6]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="BaseEnemiga" type="Node2D" groups=[
"minimapa",
]]
script = ExtResource( 4 )
orbital = ExtResource( 6 )
rutas = [ ExtResource( 7 ), ExtResource( 8 ) ]

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( -136.19, -78.4877 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sprites"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="BarraSalud" parent="Sprites" instance=ExtResource( 9 )]
margin_left = -92.0
margin_top = -210.0
margin_right = 88.0
margin_bottom = -190.0
rect_rotation = 0.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
siempre_visible = true

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 11
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 68.5894, -78.4888 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -154.023, -77.6637 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
visible = false
collision_mask = 3

[node name="SpriteZonaRecarga" parent="AreaAtraccion" index="0"]
modulate = Color( 0.223529, 0.960784, 0.603922, 0 )

[node name="CollisionShape2D" parent="AreaAtraccion" index="1"]
visible = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 4 )
anims/rotacion_atihorario = SubResource( 5 )
anims/rotacion_horario = SubResource( 6 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawn" type="Node2D" parent="."]

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -325 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 325 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -400, 0 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 325, 0 )

[node name="TimerSpawnEnemigos" type="Timer" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnEnemigos" to="." method="_on_TimerSpawnEnemigos_timeout"]

[editable path="AreaAtraccion"]
